test/typecheck/pass/bool_bits_mapping.sail
default Order dec

$include <prelude.sail>

mapping bool_bits : bool <-> bits(1) = {
  true   <-> 0b1,
  false  <-> 0b0
}
