test/typecheck/fail/unbound_tyvar.sail
default Order dec

$include <vector_dec.sail>

function foo() -> bits(definitelydoesntexist) = {
  0b0
}
